# modern-python-dev

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
src/: ruff_error.py  sample.py  type_mismatch.py  type_mismatch_no_hints.py
