[project]
name = "modern-python-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "numpy>=2.3.5",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "UP",
    "SIM",
]
ignore = []

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]
