[project]
name = "modern-python-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "numpy>=2.3.5",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "poethepoet>=0.37.0",
    "pre-commit>=4.4.0",
    "ruff>=0.14.6",
]


[tool.poe.tasks]
format = "uv run ruff format ."
lint = "uv run ruff check --fix ."
type-check = "uv run mypy ."

check = ["format", "lint", "type-check"]
